hand-on/manifest/develop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-node
  template:
    metadata:
      labels:
        app: hello-node
    spec:
      containers:
      - name: hello-node
        image: anonja/nodejs-api:f4be80
        ports:
        - containerPort: 80
